--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
-root = true 
-[*]
-ident_style = space
-ident_size = 2 
-           
+[*.{js}]
+charset = utf-8
+indent_style = space
+indent_size = 2
+                                
